[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sounds/flag_activating.mp3" type="AudioStream" id=1]
[ext_resource path="res://Scenes/Scripts/Checkpoint.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Props/checkpoint_frames.tres" type="SpriteFrames" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 24 )

[node name="Checkpoint" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -24, 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 24, -24 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 8, -8 )
frames = ExtResource( 3 )
animation = "not set"
playing = true

[node name="FlagActivatingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
